--- a/app/templates/inventory_management/products.html
+++ b/app/templates/inventory_management/products.html
@@ -86,6 +86,9 @@
 						<td>{{ my_p.type_name }}</td>
 						<td>{{ my_p.supplier_name }}</td>
 						{% if is_inv_admin %}
+						<td><a href="{{ url_for('edit_my_product', prod_id=my_p.product_id, comp_id=company.id) }}">
+						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+						</a></td>
 						<td><a href="{{ url_for('delete_product', prod_id=my_p.product_id, comp_id=company.id) }}">
 						<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 						</a></td>
