update on inventory management guide page

--- a/app/templates/document_control.html
+++ b/app/templates/document_control.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="col-md-3" style="height:150px;">
 			<div style="bottom:0;">
-				<p>Adress: {{ company.address }}</p>
+				<p>Address: {{ company.address }}</p>
 				<p>Email: {{ company.email }}</p>
 				<p>Contact: {{ company.contact_info }}</p>
 			</div>
